🐛 (client): Fixed Logout button alignment

--- a/src/app/components/account/account.component.scss
+++ b/src/app/components/account/account.component.scss
@@ -40,6 +40,7 @@ h1 {
 
 mat-icon {
   color: white;
+  vertical-align: middle;
 }
 
 .info {
@@ -73,8 +74,8 @@ mat-icon {
   background-color: $primary-dark;
   border: none;
   color: white;
-  text-align: center;
-  text-decoration: none;
+  //text-align: center;
+  //text-decoration: none;
   display: inline-block !important;
   font-size: 16px;
   margin: 10px;
@@ -96,7 +97,8 @@ mat-icon {
   margin: 0;
   padding: 0;
   //position: relative;
-  display: block;
+  display: flex;//block;
+  align-items: center;
   margin: auto;
   margin-top: 3%;
   //top: 50%;
